2005-03-01 Magnus Hagdorn
 * glide_velo.f90: new subroutine for handling vetical velo in case of periodic EW BC
 * glide_temp.f90: hooked up this subroutine
 * glide_thck.f90: modified BC for periodic BC
 * documented the lot

2005-03-01 Magnus Hagdorn
 * documentation gets version from configure
 * glide_velo.f90: fixed bug with loop over grid and avoid unnecessary memory allocation

2005-03-01 Ian Rutt
 * Removed redundant paramfiles.tex from doc/ug
 * Removed a couple of redundent components from glint
 * Hopefully fixed up hotstarts for glint (only a sinlge array needs to be written)
	
2005-02-29 Ian Rutt
 * Updated docs to match new GLINT API
 * Added additional underscore control code substitution to parts of LaTeX
   autogeneration in generate_ncvars.py

2005-02-28 Magnus Hagdorn
 * updated documentation
 * glimmer_config.f90: fixed a bug, grr too many programming languages swimming in my head
 * beautified INSTALL

2005-02-29 Ian Rutt
 * Changed documentation to match renamed I/O sections
 * Added relevant output sections to gint_vars.def
 * Moved glint output to end of timestep, and consolidated glide timstep calls
 * Moved output orography grid definition to initalise_glint call as
   optional arguments, and removed glint_set_orog_res subroutine

2005-02-28 Magnus Hagdorn
 * g_land.config: renamed I/O section

2005-02-26 Magnus Hagdorn
 * bumped version to 0.3
 * physics.tex: removed mb section since Ian resurrected it elsewhere
 * driver.tex: some updates for eis climate
 * glint.tex: fixed reference
 * intro.tex: removed misleading section on GLIMMER
 * glimmer_config.f90: added subroutine checking if all section are used
   and hooked it up (eis_glide.f90, simple_glide.f90, glint.f90)
 * glimmer_ncparams.f90: prefixed section names with CF
 * glimmer_version.f90.in: version string is generated by configure
 * glimmer_global.f90: load new version module
 * configure.in handles versioning and also generates new script glimmer-config
 * updated NEWS
	