@@ -98,35 +98,35 @@ coordinates:   lon lat
 dimensions:    time, y0, x0
 units:         meter2/year
 long_name:     flux in x direction
-data:          data%velocity%uflx(1:data%general%ewn-1,1:data%general%nsn-1)
+data:          data%velocity%uflx
 factor:        scale2d_f2
 
 [vflx]
 dimensions:    time, y0, x0
 units:         meter2/year
 long_name:     flux in x direction
-data:          data%velocity%vflx(1:data%general%ewn-1,1:data%general%nsn-1)
+data:          data%velocity%vflx
 factor:        scale2d_f2
 
 [diffu]
 dimensions:    time, y0, x0
 units:         meter2/year
 long_name:     apparent diffusivity
-data:          data%velocity%diffu(1:data%general%ewn-1,1:data%general%nsn-1)
+data:          data%velocity%diffu
 factor:        scale2d_f4
 
 [btrc]
 dimensions:    time, y0, x0
 units:         meter/pascal/year
 long_name:     basal slip coefficient
-data:          data%velocity%btrc(1:data%general%ewn-1,1:data%general%nsn-1)
+data:          data%velocity%btrc
 factor:        scale2d_f6
 
 [ubas]
 dimensions:    time, y0, x0
 units:         meter/year
 long_name:     basal slip velocity in x direction
-data:          data%velocity%ubas(1:data%general%ewn-1,1:data%general%nsn-1)
+data:          data%velocity%ubas
 factor:        scale2d_f5
 standard_name: land_ice_basal_x_velocity
 load:          1
@@ -135,7 +135,7 @@ load:          1
 dimensions:    time, y0, x0
 units:         meter/year
 long_name:     basal slip velocity in y direction
-data:          data%velocity%vbas(1:data%general%ewn-1,1:data%general%nsn-1)
+data:          data%velocity%vbas
 factor:        scale2d_f5
 standard_name: land_ice_basal_y_velocity
 load:          1
@@ -244,7 +244,7 @@ coordinates:   lon lat
 dimensions:    time, level, y0, x0
 units:         meter/year
 long_name:     ice velocity in x direction
-data:          data%velocity%uvel(up,1:data%general%ewn-1,1:data%general%nsn-1)
+data:          data%velocity%uvel(up,:,:)
 factor:        scale3d_f1
 standard_name: land_ice_x_velocity
 
@@ -252,7 +252,7 @@ standard_name: land_ice_x_velocity
 dimensions:    time, level, y0, x0
 units:         meter/year
 long_name:     ice velocity in y direction
-data:          data%velocity%vvel(up,1:data%general%ewn-1,1:data%general%nsn-1)
+data:          data%velocity%vvel(up,:,:)
 factor:        scale3d_f1
 standard_name: land_ice_y_velocity
 
